--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@ idea/
 aclImdb/
 data/
 logs/
-model/
 
 # OS generated files #
 ######################
@@ -42,3 +41,5 @@ ehthumbs.db
 Thumbs.db
 venv/
 .idea/
+
+.gitignore
